fixed resource counting error in TEnumType.CreateFromSourceTokens

--- a/source/cpc_core/test_cpc_core.lpi
+++ b/source/cpc_core/test_cpc_core.lpi
@@ -30,6 +30,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
+        <CommandLineParams Value="--debug-log=\temp\cpc_laz.txt"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
