--- a/source/cpc_core/test_cpc_core.lpi
+++ b/source/cpc_core/test_cpc_core.lpi
@@ -192,7 +192,18 @@
       </Options>
     </Linking>
     <Other>
-      <CustomOptions Value="-dBorland -dVer150 -dDelphi7 -dCompiler6_Up -dPUREPASCAL"/>
+      <CustomOptions Value="-dBorland
+-dVer150
+-dDelphi7
+-dCompiler6_Up
+-dPUREPASCAL"/>
+      <OtherDefines Count="5">
+        <Define0 Value="Borland"/>
+        <Define1 Value="Ver150"/>
+        <Define2 Value="Delphi7"/>
+        <Define3 Value="Compiler6_Up"/>
+        <Define4 Value="PUREPASCAL"/>
+      </OtherDefines>
     </Other>
   </CompilerOptions>
   <Debugging>
