added file open & save dialogs, added canclose check

--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
@@ -85,7 +85,7 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="6">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -95,6 +95,15 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="ETermExpressionSimplification"/>
+      </Item4>
+      <Item5>
+        <Name Value="ESimpleExpressionSimplification"/>
+      </Item5>
+      <Item6>
+        <Name Value="ERelationalExpressionSimplification"/>
+      </Item6>
     </Exceptions>
   </Debugging>
 </CONFIG>
