updated pic18x compiler for lazarus, re-added cycle stmt

--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
@@ -38,11 +38,147 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="1">
+    <Units Count="32">
       <Unit0>
         <Filename Value="pic18x_config_bit_editor.dpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="main_form_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="MainForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit1>
+      <Unit2>
+        <Filename Value="..\common\pic18x_common_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit2>
+      <Unit3>
+        <Filename Value="..\common\pic18x_selection_dialog_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Pic18xSelectionDialog"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="..\..\lib\LibXmlParser.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="..\..\cpc_core\cpc_definitions_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit5>
+      <Unit6>
+        <Filename Value="dummy_pic18x_cpu_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit6>
+      <Unit7>
+        <Filename Value="..\..\cpc_core\cpc_expressions_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit7>
+      <Unit8>
+        <Filename Value="..\..\lib\regular_expression_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit8>
+      <Unit9>
+        <Filename Value="about_box_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="AboutBox"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit9>
+      <Unit10>
+        <Filename Value="..\..\cpc_core\cpc_source_analysis_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit10>
+      <Unit11>
+        <Filename Value="..\..\lib\about_credit_frame_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <HasResources Value="True"/>
+      </Unit11>
+      <Unit12>
+        <Filename Value="..\..\lib\LibXmlComps.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit12>
+      <Unit13>
+        <Filename Value="..\..\cpc_core\cpc_access_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="..\..\cpc_core\cpc_blocks_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit14>
+      <Unit15>
+        <Filename Value="..\..\cpc_core\cpc_common_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit15>
+      <Unit16>
+        <Filename Value="..\..\cpc_core\cpc_constant_expression_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit16>
+      <Unit17>
+        <Filename Value="..\..\cpc_core\cpc_core_objects_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit17>
+      <Unit18>
+        <Filename Value="..\..\cpc_core\cpc_main_compiler_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit18>
+      <Unit19>
+        <Filename Value="..\..\cpc_core\cpc_multi_precision_integer_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit19>
+      <Unit20>
+        <Filename Value="..\..\cpc_core\cpc_simple_expression_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit20>
+      <Unit21>
+        <Filename Value="..\..\cpc_core\cpc_statements_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit21>
+      <Unit22>
+        <Filename Value="..\..\cpc_core\cpc_target_cpu_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="..\..\cpc_core\cpc_term_expression_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit23>
+      <Unit24>
+        <Filename Value="..\..\cpc_core\cpc_types_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit24>
+      <Unit25>
+        <Filename Value="..\..\lib\mparith\mp_base.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit25>
+      <Unit26>
+        <Filename Value="..\..\lib\mparith\mp_types.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit26>
+      <Unit27>
+        <Filename Value="..\..\lib\mparith\btypes.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="BTypes"/>
+      </Unit27>
+      <Unit28>
+        <Filename Value="..\..\lib\mparith\mp_prng.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit28>
+      <Unit29>
+        <Filename Value="..\..\lib\mparith\isaac.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ISAAC"/>
+      </Unit29>
+      <Unit30>
+        <Filename Value="..\..\lib\wirth_balanced_binary_tree_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit30>
+      <Unit31>
+        <Filename Value="..\..\lib\dijkstra_smoothsort_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit31>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -52,8 +188,8 @@
       <Filename Value="..\..\..\bin\pic18x_config_bit_editor"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\lib"/>
+      <IncludeFiles Value="..\common;..\..\lib;..\..\cpc_core;..\..\lib\mparith"/>
+      <OtherUnitFiles Value="..\..\lib;..\common;..\..\cpc_core;..\..\lib\mparith"/>
       <UnitOutputDirectory Value="..\..\..\obj\pic18x_config_bit_editor"/>
     </SearchPaths>
     <Parsing>
