--- a/source/cpc_core/run_cpc_core_tests.dproj
+++ b/source/cpc_core/run_cpc_core_tests.dproj
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{8f06c855-273c-4cba-b3be-6fbf0c924127}</ProjectGuid>
+    <ProjectGuid>{2358bff1-c81c-4511-be13-149cb86b9899}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>..\..\bin\test_cpc_core.exe</DCC_DependencyCheckOutputName>
-    <MainSource>test_cpc_core.dpr</MainSource>
+    <DCC_DependencyCheckOutputName>..\..\bin\run_cpc_core_tests.exe</DCC_DependencyCheckOutputName>
+    <MainSource>run_cpc_core_tests.dpr</MainSource>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Version>7.0</Version>
@@ -17,13 +17,15 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Version>7.0</Version>
-    <DCC_Define>DEBUG</DCC_Define>
+    <DCC_Define>DEBUG;CONSOLE_TEST_MODE</DCC_Define>
     <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
     <DCC_RangeChecking>True</DCC_RangeChecking>
+    <DCC_MapFile>3</DCC_MapFile>
+    <DCC_ConsoleTarget>True</DCC_ConsoleTarget>
     <DCC_ExeOutput>..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>..\..\obj\test_cpc_core</DCC_DcuOutput>
-    <DCC_ObjOutput>..\..\obj\test_cpc_core</DCC_ObjOutput>
-    <DCC_HppOutput>..\..\obj\test_cpc_core</DCC_HppOutput>
+    <DCC_DcuOutput>..\..\obj\run_cpc_core_tests</DCC_DcuOutput>
+    <DCC_ObjOutput>..\..\obj\run_cpc_core_tests</DCC_ObjOutput>
+    <DCC_HppOutput>..\..\obj\run_cpc_core_tests</DCC_HppOutput>
     <DCC_UnitSearchPath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_UnitSearchPath>
     <DCC_ResourcePath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_ResourcePath>
     <DCC_ObjPath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_ObjPath>
@@ -33,11 +35,11 @@
     <Borland.Personality>Delphi.Personality</Borland.Personality>
     <Borland.ProjectType />
     <BorlandProject>
-<BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">False</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">test_cpc_core.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
+<BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">False</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">run_cpc_core_tests.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <ItemGroup>
-    <DelphiCompile Include="test_cpc_core.dpr">
+    <DelphiCompile Include="run_cpc_core_tests.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
     <DCCReference Include="cpc_access_unit.pas" />
@@ -60,9 +62,6 @@
     <DCCReference Include="test_constant_expression_unit.pas" />
     <DCCReference Include="test_cpu_unit.pas" />
     <DCCReference Include="test_expression_syntax_unit.pas" />
-    <DCCReference Include="test_main_form_unit.pas">
-      <Form>MainForm</Form>
-    </DCCReference>
     <DCCReference Include="test_multi_precision_integer_unit.pas" />
     <DCCReference Include="test_statement_syntax_unit.pas" />
     <DCCReference Include="test_subroutines_unit.pas" />
