--- a/source/pic18x/run_pic18x_kernel_tests.dproj
+++ b/source/pic18x/run_pic18x_kernel_tests.dproj
@@ -1,11 +1,12 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{30dd8f5b-c99a-46ea-8af1-347980a0d0e8}</ProjectGuid>
+    <ProjectGuid>{4454a265-8865-4f39-990d-1d3ae4231444}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>..\..\bin\test_cpc_pic18x.exe</DCC_DependencyCheckOutputName>
-    <MainSource>test_cpc_pic18x.dpr</MainSource>
+    <DCC_DependencyCheckOutputName>..\..\bin\run_pic18x_kernel_tests.exe</DCC_DependencyCheckOutputName>
+    <MainSource>run_pic18x_kernel_tests.dpr</MainSource>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Version>7.0</Version>
@@ -16,13 +17,13 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Version>7.0</Version>
-    <DCC_Define>DEBUG;INCLUDE_SIMULATION</DCC_Define>
+    <DCC_Define>DEBUG;INCLUDE_SIMULATION;CONSOLE_TEST_MODE</DCC_Define>
     <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
     <DCC_RangeChecking>True</DCC_RangeChecking>
     <DCC_ExeOutput>..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>..\..\obj\test_cpc_pic18x</DCC_DcuOutput>
-    <DCC_ObjOutput>..\..\obj\test_cpc_pic18x</DCC_ObjOutput>
-    <DCC_HppOutput>..\..\obj\test_cpc_pic18x</DCC_HppOutput>
+    <DCC_DcuOutput>..\..\obj\run_pic18x_kernel_tests</DCC_DcuOutput>
+    <DCC_ObjOutput>..\..\obj\run_pic18x_kernel_tests</DCC_ObjOutput>
+    <DCC_HppOutput>..\..\obj\run_pic18x_kernel_tests</DCC_HppOutput>
     <DCC_UnitSearchPath>..\lib;..\lib\mparith;common;..\lib\fastmm</DCC_UnitSearchPath>
     <DCC_ResourcePath>..\lib;..\lib\mparith;common;..\lib\fastmm</DCC_ResourcePath>
     <DCC_ObjPath>..\lib;..\lib\mparith;common;..\lib\fastmm</DCC_ObjPath>
@@ -32,11 +33,11 @@
     <Borland.Personality>Delphi.Personality</Borland.Personality>
     <Borland.ProjectType />
     <BorlandProject>
-<BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">False</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">test_cpc_pic18x.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
+<BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">False</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">run_pic18x_kernel_tests.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <ItemGroup>
-    <DelphiCompile Include="test_cpc_pic18x.dpr">
+    <DelphiCompile Include="run_pic18x_kernel_tests.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
     <DCCReference Include="..\cpc_core\cpc_access_unit.pas" />
@@ -74,11 +75,8 @@
     <DCCReference Include="pic18x_string_unit.pas" />
     <DCCReference Include="pic18x_term_expression_unit.pas" />
     <DCCReference Include="pic18x_types_unit.pas" />
-    <DCCReference Include="test_pic18x_compiler_main_form_unit.pas">
-      <Form>MainForm</Form>
-    </DCCReference>
     <DCCReference Include="test_pic18x_compiler_unit.pas" />
     <DCCReference Include="test_pic18x_kernel_unit.pas" />
-    <DCCReference Include="test_pic18x_simulator_unit.pas" />
+    <DCCReference Include="test_pic18x_subroutines_unit.pas" />
   </ItemGroup>
 </Project>
