removed kernel test from pic18x compiler test "ide", htmlview was non-portable

--- a/source/pic18x/test_cpc_pic18x.lpi
+++ b/source/pic18x/test_cpc_pic18x.lpi
@@ -224,7 +224,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="..\cpc_core;..\lib;common;$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\lib\htmlviewer;..\cpc_core;..\lib;..\lib\fastmm;..\lib\mparith;common"/>
+      <OtherUnitFiles Value="..\cpc_core;..\lib;..\lib\fastmm;..\lib\mparith;common"/>
       <UnitOutputDirectory Value="..\..\obj\test_cpc_pic18x"/>
     </SearchPaths>
     <Parsing>
