--- a/source/pic18x/cpc_pic18x.lpi
+++ b/source/pic18x/cpc_pic18x.lpi
@@ -221,7 +221,7 @@
     <SearchPaths>
       <IncludeFiles Value="..\lib;..\lib\mparith;..\cpc_core;common;$(ProjOutDir)"/>
       <OtherUnitFiles Value="..\lib;..\lib\mparith;..\cpc_core;common"/>
-      <UnitOutputDirectory Value="..\..\obj\cpc_pic18x"/>
+      <UnitOutputDirectory Value="obj"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
