--- a/source/cpc_core/run_cpc_core_tests/run_cpc_core_tests.dproj
+++ b/source/cpc_core/run_cpc_core_tests/run_cpc_core_tests.dproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>..\..\bin\run_cpc_core_tests.exe</DCC_DependencyCheckOutputName>
+    <DCC_DependencyCheckOutputName>..\..\..\bin\run_cpc_core_tests.exe</DCC_DependencyCheckOutputName>
     <MainSource>run_cpc_core_tests.dpr</MainSource>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -22,14 +22,14 @@
     <DCC_RangeChecking>True</DCC_RangeChecking>
     <DCC_MapFile>3</DCC_MapFile>
     <DCC_ConsoleTarget>True</DCC_ConsoleTarget>
-    <DCC_ExeOutput>..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>..\..\obj\run_cpc_core_tests</DCC_DcuOutput>
-    <DCC_ObjOutput>..\..\obj\run_cpc_core_tests</DCC_ObjOutput>
-    <DCC_HppOutput>..\..\obj\run_cpc_core_tests</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_ResourcePath>
-    <DCC_ObjPath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_ObjPath>
-    <DCC_IncludePath>..\lib;..\lib\mparith;..\lib\fastmm</DCC_IncludePath>
+    <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
+    <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
+    <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
+    <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
+    <DCC_UnitSearchPath>..\..\lib;..\..\lib\mparith;..\..\lib\fastmm</DCC_UnitSearchPath>
+    <DCC_ResourcePath>..\..\lib;..\..\lib\mparith;..\..\lib\fastmm</DCC_ResourcePath>
+    <DCC_ObjPath>..\..\lib;..\..\lib\mparith;..\..\lib\fastmm</DCC_ObjPath>
+    <DCC_IncludePath>..\..\lib;..\..\lib\mparith;..\..\lib\fastmm</DCC_IncludePath>
   </PropertyGroup>
   <ProjectExtensions>
     <Borland.Personality>Delphi.Personality</Borland.Personality>
@@ -42,30 +42,30 @@
     <DelphiCompile Include="run_cpc_core_tests.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
-    <DCCReference Include="cpc_access_unit.pas" />
-    <DCCReference Include="cpc_blocks_unit.pas" />
-    <DCCReference Include="cpc_common_unit.pas" />
-    <DCCReference Include="cpc_constant_expression_unit.pas" />
-    <DCCReference Include="cpc_core_objects_unit.pas" />
-    <DCCReference Include="cpc_definitions_unit.pas" />
-    <DCCReference Include="cpc_expressions_unit.pas" />
-    <DCCReference Include="cpc_main_compiler_unit.pas" />
-    <DCCReference Include="cpc_multi_precision_integer_unit.pas" />
-    <DCCReference Include="cpc_simple_expression_unit.pas" />
-    <DCCReference Include="cpc_source_analysis_unit.pas" />
-    <DCCReference Include="cpc_statements_unit.pas" />
-    <DCCReference Include="cpc_target_cpu_unit.pas" />
-    <DCCReference Include="cpc_term_expression_unit.pas" />
-    <DCCReference Include="cpc_types_unit.pas" />
-    <DCCReference Include="test_access_syntax_unit.pas" />
-    <DCCReference Include="test_block_synax_unit.pas" />
-    <DCCReference Include="test_block_syntax_unit.pas" />
-    <DCCReference Include="test_constant_expression_unit.pas" />
-    <DCCReference Include="test_cpu_unit.pas" />
-    <DCCReference Include="test_expression_syntax_unit.pas" />
-    <DCCReference Include="test_multi_precision_integer_unit.pas" />
-    <DCCReference Include="test_statement_syntax_unit.pas" />
-    <DCCReference Include="test_subroutines_unit.pas" />
-    <DCCReference Include="test_type_syntax_unit.pas" />
+    <DCCReference Include="..\cpc_access_unit.pas" />
+    <DCCReference Include="..\cpc_blocks_unit.pas" />
+    <DCCReference Include="..\cpc_common_unit.pas" />
+    <DCCReference Include="..\cpc_constant_expression_unit.pas" />
+    <DCCReference Include="..\cpc_core_objects_unit.pas" />
+    <DCCReference Include="..\cpc_definitions_unit.pas" />
+    <DCCReference Include="..\cpc_expressions_unit.pas" />
+    <DCCReference Include="..\cpc_main_compiler_unit.pas" />
+    <DCCReference Include="..\cpc_multi_precision_integer_unit.pas" />
+    <DCCReference Include="..\cpc_simple_expression_unit.pas" />
+    <DCCReference Include="..\cpc_source_analysis_unit.pas" />
+    <DCCReference Include="..\cpc_statements_unit.pas" />
+    <DCCReference Include="..\cpc_target_cpu_unit.pas" />
+    <DCCReference Include="..\cpc_term_expression_unit.pas" />
+    <DCCReference Include="..\cpc_types_unit.pas" />
+    <DCCReference Include="..\test_access_syntax_unit.pas" />
+    <DCCReference Include="..\test_block_synax_unit.pas" />
+    <DCCReference Include="..\test_block_syntax_unit.pas" />
+    <DCCReference Include="..\test_constant_expression_unit.pas" />
+    <DCCReference Include="..\test_cpu_unit.pas" />
+    <DCCReference Include="..\test_expression_syntax_unit.pas" />
+    <DCCReference Include="..\test_multi_precision_integer_unit.pas" />
+    <DCCReference Include="..\test_statement_syntax_unit.pas" />
+    <DCCReference Include="..\test_subroutines_unit.pas" />
+    <DCCReference Include="..\test_type_syntax_unit.pas" />
   </ItemGroup>
 </Project>
