--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
@@ -21,9 +21,9 @@
     <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
     <DCC_RangeChecking>True</DCC_RangeChecking>
     <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>..\..\..\obj\pic18x_config_bit_editor</DCC_DcuOutput>
-    <DCC_ObjOutput>..\..\..\obj\pic18x_config_bit_editor</DCC_ObjOutput>
-    <DCC_HppOutput>..\..\..\obj\pic18x_config_bit_editor</DCC_HppOutput>
+    <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
+    <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
+    <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
     <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_UnitSearchPath>
     <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_ResourcePath>
     <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_ObjPath>
