--- a/source/pic18x/cpc_pic18x.dproj
+++ b/source/pic18x/cpc_pic18x.dproj
@@ -20,9 +20,9 @@
     <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
     <DCC_RangeChecking>True</DCC_RangeChecking>
     <DCC_ExeOutput>..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>..\..\obj\cpc_pic18x</DCC_DcuOutput>
-    <DCC_ObjOutput>..\..\obj\cpc_pic18x</DCC_ObjOutput>
-    <DCC_HppOutput>..\..\obj\cpc_pic18x</DCC_HppOutput>
+    <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
+    <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
+    <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
     <DCC_UnitSearchPath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_UnitSearchPath>
     <DCC_ResourcePath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_ResourcePath>
     <DCC_ObjPath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_ObjPath>
