fixed icons & missing .res files for lazarus & typo

--- a/source/pic18x/run_pic18x_kernel_tests/run_pic18x_kernel_tests.lpi
+++ b/source/pic18x/run_pic18x_kernel_tests/run_pic18x_kernel_tests.lpi
@@ -14,6 +14,7 @@
       <Title Value="run_pic18x_kernel_tests"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
+      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
