--- a/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
+++ b/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
@@ -9,6 +9,7 @@
       <Title Value="test_cpc_pic18x"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
+      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
