--- a/source/cpc_core/run_cpc_core_tests/run_cpc_core_tests.lpi
+++ b/source/cpc_core/run_cpc_core_tests/run_cpc_core_tests.lpi
@@ -14,6 +14,7 @@
       <Title Value="run_cpc_core_tests"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
+      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
