--- a/source/pic18x/cpc_pic18x.dproj
+++ b/source/pic18x/cpc_pic18x.dproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{6ad82fe0-9e5d-45b2-9bf8-92ef992d6197}</ProjectGuid>
@@ -23,10 +24,10 @@
     <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
     <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
     <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_ResourcePath>
-    <DCC_ObjPath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_ObjPath>
-    <DCC_IncludePath>..\lib;..\lib\freemm;..\lib\mparith;..\cpc_core;common</DCC_IncludePath>
+    <DCC_UnitSearchPath>..\lib;..\lib\fastmm;..\lib\mparith;..\cpc_core;common</DCC_UnitSearchPath>
+    <DCC_ResourcePath>..\lib;..\lib\fastmm;..\lib\mparith;..\cpc_core;common</DCC_ResourcePath>
+    <DCC_ObjPath>..\lib;..\lib\fastmm;..\lib\mparith;..\cpc_core;common</DCC_ObjPath>
+    <DCC_IncludePath>..\lib;..\lib\fastmm;..\lib\mparith;..\cpc_core;common</DCC_IncludePath>
   </PropertyGroup>
   <ProjectExtensions>
     <Borland.Personality>Delphi.Personality</Borland.Personality>
@@ -55,6 +56,7 @@
     <DCCReference Include="..\cpc_core\cpc_term_expression_unit.pas" />
     <DCCReference Include="..\cpc_core\cpc_types_unit.pas" />
     <DCCReference Include="..\lib\dijkstra_smoothsort_unit.pas" />
+    <DCCReference Include="..\lib\fastmm\fastmm4.pas" />
     <DCCReference Include="..\lib\mparith\btypes.pas" />
     <DCCReference Include="..\lib\mparith\isaac.pas" />
     <DCCReference Include="..\lib\mparith\mp_base.pas" />
